# automata-back-end-task

./: README.md  pyproject.toml
automata/: __main__.py  logging.py  models.py
automata/core/: evil_computer.py  game.py  storage.py
automata/ui/: cli.py
tests/automata/core/: test_evil_computer.py  test_game.py  test_storage.py
tests/automata/ui/: test_cli.py
